TEST: Trying to fix broken layout on android devices

--- a/core/static/css/android-conf.css
+++ b/core/static/css/android-conf.css
@@ -144,8 +144,7 @@ footer li.last div {float:left; width:100px}
     color: #687680;
     display: table-cell;
     float: right;
-    padding-left: 30px;
-    width: 300px;
+    width: 306px;
 }
 
 
